# cdhit

./: .gitignore  ChangeLog  Makefile  cdhit-common.c++  cdhit-common.h  cdhit-utility.c++  meson.build  meson_options.txt  native.ini  pyproject.toml  test.fasta  test_out.restart  vcpkg.ini  vcpkg.json
Docker/: Dockerfile
cdhit/: __init__.py  utils.py
distributed_run/: README.md  docker-compose.yml  test.fas
scripts/: cd-hit-div.py  cd-hit-para.py  clstr2txt.py  clstr_list.py  clstr_list_sort.py  clstr_merge.py  clstr_merge_noorder.py  clstr_quality_eval.py  clstr_quality_eval_by_link.py  clstr_reduce.py  clstr_reduce2.py  clstr_renumber.py  clstr_rep.py  clstr_reps_faa_rev.py  glob_pl.py  meson.build  naa_stat_packer.py
scripts/wsl/: cd-hit-2d.cmd  cd-hit-est-2d.cmd  cd-hit-est.cmd  cd-hit.cmd  cdhit.ps1
src/: cdhit-2d.cpp  cdhit-454.cpp  cdhit-div.c++  cdhit-est-2d.c++  cdhit-est.c++  cdhit-est.cpp  cdhit.c++  meson.build
src/lib/: DoCluster.ixx  Options.ixx  ScoreMatrix.cpp  ScoreMatrix.h  ScoreMatrix.ixx  Sequance.ixx  SequanceDB.ixx  SequanceDB.ixx.tmp  WordTable.ixx  WorkingBuffer.ixx  WorkingParam.ixx  aligners.cpp  cdhit-common.c++  cdhit-common.cpp  cdhit-common.h  cdhit-utility.c++  common.ixx  diag.h  gzfstream.ixx
test_out.cd-hit-para-tmp/: log.0  log.1  log.2  log.3  test.fasta.div-0  test.fasta.div-1  test.fasta.div-2  test.fasta.div-3
tests/: run_tests.sh
tests/fixture1/: test_out.restart  test_simple  test_simple.clstr  test_simple.clstr.merged  test_simple.restart
tests/fixute2/: UNKNOWN10.fasta  UNKNOWN100.fasta  UNKNOWN2500.fasta  test_unk_2500_2  test_unk_2500_2.clstr
