option('openmp', type: 'boolean', value: false, description: 'Enable OpenMP support')
option('zlib', type: 'boolean', value: true, description: 'Enable zlib support')
option('static', type: 'boolean', value: true, description: 'Static linking support')
option('MAX_SEQ', type: 'integer', value: 0, description: 'MAX SEQ length')
option('enable_avx2', type: 'boolean', value: false, description: 'Enable AVX2 support')
