[project]
name = "cdhit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Refael Ackermann", email = "refack@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dask-jobqueue>=0.9.0",
    "dask[complete]>=2025.7.0",
    "distributed>=2025.7.0",
    "jsonpickle>=5.0.0rc1",
]

[project.scripts]
cdhit = "cdhit:main"

#[build-system]
#requires = ["uv_build>=0.8.11,<0.9.0"]
#build-backend = "uv_build"
